# meow.cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: conf.py  contents.rst  index.rst
{{ cookiecutter.project_slug }}/docs/source/: glossary.rst
{{ cookiecutter.project_slug }}/docs/source/handbook/: hello_world.rst  index.rst
{{ cookiecutter.project_slug }}/docs/source/intro/: index.rst  install.rst  overview.rst
{{ cookiecutter.project_slug }}/docs/source/ref/: index.rst
{{ cookiecutter.project_slug }}/docs/source/releases/: index.rst  v0.1.0.rst
{{ cookiecutter.project_slug }}/src/.cfg/environments/: .env
{{ cookiecutter.project_slug }}/src/apps/account/: __init__.py  admin.py  apps.py  tests.py  views.py
{{ cookiecutter.project_slug }}/src/apps/account/api/: __init__.py  urls.py
{{ cookiecutter.project_slug }}/src/apps/account/forms/: user_admin_change.py  user_admin_creation.py
{{ cookiecutter.project_slug }}/src/apps/account/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/src/core/: __init__.py  asgi.py  wsgi.py
{{ cookiecutter.project_slug }}/src/core/settings/: __init__.py  django.py  local.py  third_party.py
{{ cookiecutter.project_slug }}/src/core/urls/: __init__.py  api.py  web.py
{{ cookiecutter.project_slug }}/src/utils/: __init__.py
{{ cookiecutter.project_slug }}/src/utils/constants/: __init__.py
{{ cookiecutter.project_slug }}/src/utils/fnc/: __init__.py
(+6 files in other folders)
