[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.0.4"
django-environ = "0.8.1"
djangorestframework = "3.13.1"
django-oauth-toolkit = "2.0.0"
drf-spectacular = "0.22.1"
drf-spectacular-sidecar = "2022.5.1"
django-debug-toolbar = "3.4.0"

[tool.poetry.dev-dependencies]
Sphinx = "4.5.0"
sphinx-immaterial = "0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
